# judo-footage-analysis-clone

./: .env.example  .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  pyproject.toml  requirements.in  requirements.txt  test_ffmpeg.py
config/label-studio/: combat-phase-labeling.xml  nginx.conf  referee-pose-labeling.xml  whole-scene-labeling.xml
judo_footage_analysis/: transforms.py  utils.py
judo_footage_analysis/combat_phase/: __main__.py  labelstudio_to_raw.py  raw_to_discrete.py
judo_footage_analysis/label_studio/debug_backend/: model.py  wsgi.py
judo_footage_analysis/label_studio/yolo_entity_backend/: model.py  wsgi.py
judo_footage_analysis/timer_extraction/: combat_phase_comparison.py  combine_jsons.py  display_on_video.py  is_timer.py  main.py  process_json.py  timer_task.py  utils.py
judo_footage_analysis/workflow/: evaluate.py  extract_combat_phases.py  fullframe_inference.py  fullframe_overlay.py  referee_extraction.py  sample_frames.py  truncate_videos.py
scripts/: analyze_and_visualize.py  consolidate_results.py  convert_flv_auto.py  generate_combat_json.py  generate_folder_manifest.sh  generate_intensity.py  run_combat_phase.py  scoreboard_crop_helper.py  serve_local_files.sh  truncate_videos.py
site/: package-lock.json  package.json  svelte.config.js
site/src/routes/: +layout.svelte  (+1 more)
tests/label_studio/: test_debug_backend.py
user/acmiyaguchi/: README.md  find_retrain_images.py  run_detectron.py
user/jmoutahi/: README.md  entity_extraction_inference.py  entity_extraction_inference_paths.py  test.py
user/tsutar/: README.md
(+46 files in other folders)
